@@ -298,9 +298,7 @@ class Smart extends \OMV\Rpc\ServiceAbstract {
 	 *   \em enable Enable/disable S.M.A.R.T. monitoring.
 	 *   \em tempdiff Report if the temperature had changed by at
 	 *     least N degrees Celsius since last report.
-	 *   \em tempinfo Report if the temperature is greater than or
-	 *     equal to N degrees Celsius.
-	 *   \em tempcrit Report if the temperature is greater than or
+	 *   \em tempmax Report if the temperature is greater than or
 	 *     equal to N degrees Celsius.
 	 * @param context The context of the caller.
 	 * @return The stored configuration object.
@@ -326,8 +324,7 @@ class Smart extends \OMV\Rpc\ServiceAbstract {
 			"devicefile" => $sd->getPredictableDeviceFile(),
 			"devicetype" => $sd->getSmartDeviceType(),
 			"tempdiff" => $params['tempdiff'],
-			"tempinfo" => $params['tempinfo'],
-			"tempcrit" => $params['tempcrit']
+			"tempmax" => $params['tempmax']
 		]);
 		// Set the configuration object.
 		$db = \OMV\Config\Database::getInstance();
