@@ -453,8 +453,7 @@
 			<interval>1800</interval>
 			<powermode>never</powermode>
 			<tempdiff>0</tempdiff>
-			<tempinfo>0</tempinfo>
-			<tempcrit>0</tempcrit>
+			<tempmax>0</tempmax>
 			<monitor>
 				<!--
 				<device>
@@ -463,8 +462,7 @@
 					<devicefile>/dev/xxx</devicefile>
 					<devicetype>|sat|cciss|xxx</devicetype>
 					<tempdiff>0</tempdiff>
-					<tempinfo>0</tempinfo>
-					<tempcrit>0</tempcrit>
+					<tempmax>0</tempmax>
 				</device>
 				-->
 			</monitor>
