@@ -12,6 +12,10 @@ openmediavault (6.0-26) UNRELEASED; urgency=low
     additional notification sinks set it to 'discard'.
   * Add option to FTP settings to display the home directory of the
     user in the browse list.
+  * Enhance the SMART temperature monitoring configuration.
+    Global settings can be overwritten per device. Please check
+    your settings whether the migration was correct or reconfigure
+    them if necessary.
   * Issue #1099: Add environment variables OMV_NGINX_SITE_WEBGUI_LISTEN_IPV4_ADDRESS
     and OMV_NGINX_SITE_WEBGUI_LISTEN_IPV6_ADDRESS to configure the
     WebUI to listen on a specific IP address only instead of all.
